<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="dialog_close">Close</string>
    <string name="search">Search</string>
    <string name="celsius_unit">%s \u2103</string>
    <string name="fahrenheit_unit">%s \u2109</string>
    <string name="humidity">Humidity:</string>
    <string name="humidityValue">%s \%%</string>
    <string name="see_whole_day">See Whole Day</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="date">Date:</string>

</resources>